# oop_additional_tasks

./: README.md  pyproject.toml
lesson1/: albums.py  bottle.py  number.py  students.py
lesson2/: bankaccount.py  person.py  rectangle.py  user.py
lesson3/: counter.py  fraction.py  logger.py  mylist.py  mylist2.py  point.py  timer.py
lesson4/: animal.py  car.py  employee.py  employee_2.py  person.py  shape.py
lesson5/: animal.py  bird.py  cars.py  person.py
lesson6/: cars.py
lesson7/: employee.py  student.py
lessson6/: person.py  person2.py  student.py
